# InternetQualityMonitoring

./: .gitignore  .ruff.toml  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yaml
backend/: app.py  collect_data.py  collect_data_test.py  main.py  persistence.py  test.md
frontend/: app.py
tests/: __init__.py  test_collect_data.py  test_main.py  test_persistence.py
