[tool.poetry]
name = "internetqualitymonitoring"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.4.2"
coverage = "^7.5.0"
streamlit = "^1.33.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
mutmut = "^2.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
